--- a/app/src/main/res/layout/choose_pic_item.xml
+++ b/app/src/main/res/layout/choose_pic_item.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<im.r_c.android.jigsaw.SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<im.r_c.android.jigsaw.view.SquareFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                          xmlns:tools="http://schemas.android.com/tools"
                                          android:layout_width="match_parent"
                                          android:layout_height="match_parent"
@@ -11,4 +11,4 @@
         android:layout_height="match_parent"
         android:src="@mipmap/ic_launcher"
         tools:ignore="ContentDescription"/>
-</im.r_c.android.jigsaw.SquareFrameLayout>
+</im.r_c.android.jigsaw.view.SquareFrameLayout>
