--- a/app/src/main/res/layout/fragment_game.xml
+++ b/app/src/main/res/layout/fragment_game.xml
@@ -2,7 +2,7 @@
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
-             tools:context="im.r_c.android.jigsaw.GameFragment">
+             tools:context=".fragment.GameFragment">
 
     <android.support.v7.widget.RecyclerView
         android:id="@+id/rv_bricks"
